<package>
	<name>drone5</name>
	<version>1.0.0</version>
	<description>
		Controllers developed for the "Up and flying with the AR.Drone and ROS" tutorial series
	</description>
	<maintainer email="ymanian@umd.edu">Yash Manian</maintainer>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<run_depend>ardrone_autonomy</run_depend>
	<run_depend>tum_ardrone</run_depend>
	<run_depend>joy</run_depend>
	
	<license>BSD</license>
</package>


